# libcppevents

./: README.md  meson.build  meson_options.txt
examples/: ex0.cpp  filesystem-example.cpp  meson.build  sdl-example.cpp  timer-example.cpp
include/cppevents/: common.hpp  event.hpp  event_queue.hpp  events.hpp  filesystem.hpp  glfw.hpp  input.hpp  keyboard_codes.hpp  network.hpp  sdl2.hpp  signal.hpp  timer.hpp  window.hpp
src/: event_queue-linux.cpp  filesystem-linux.cpp  glfw-integration.cpp  meson.build  os-events-linux.cpp  sdl2-integration.cpp
src/integrations/: meson.build  sdl2-integration.cpp
src/integrations/sdl2/: integration.cpp
src/platform-linux/: event_queue.cpp  network.cpp
src/platform/linux/: event_queue-epoll.cpp  filesystem.cpp  meson.build  os_events.cpp
